mus: Remove use of gpu message-pump.

The gpu message-pump is no longer ncessary. It is not used in
chrome-gpu either.

BUG=671397

Review-Url: https://codereview.chromium.org/2560303002
Cr-Commit-Position: refs/heads/master@{#437754}

Former-commit-id: 5e14f3675dcbf7d72739bfdb1517ff2c5d3dd48c